Controller Pro 1.0.10
=====================

 - Add Port Abstraction Daemon (PAD) source files to project (ORCJAVA-314 + ORCJAVA-375)
 - EnOcean Implementation (Rainer Hitz) (ORCJAVA-348)

Controller Pro 1.0.9
====================

New Features:

  - Include Web Console 2.1.0, r7746 (ORCJAVA-333)
  
Bug Fixes:

  - ISY-99 implementation does not scale to high number of
    sensors (Kevin Purney) (ORCJAVA-325)
  - Telnet status read for switch sensors appears broken. A returned
    'on' string is never correctly parsed to Java boolean value true
    due to the extra linefeed '\n' character being added to all response
    values in readString() implementation (ORCJAVA-326)
  - Telnet log configuration (ORCJAVA-328)
  - The controller build script does not mandate an explicit character
    encoding for all Java compiler tasks. This causes issues on some
    systems with incompatible default character set/locale. This patch
    enforces UTF-8 encoding on all compiled source files. (ORCJAVA-329)
  - Updates the core controller classes (excluding protocol 
    implementations, these are updated in separate tasks) to use 
    locale independent string conversions (ORCJAVA-332)
  - Restlet ClientResource was released too soon (before resource
    content was consumed), causing a NPE.
    Fixed by moving release call in finally block after processing. (ORCJAVA-295)

Controller Pro 1.0.8
====================

New Features:

  - Marantz AVR protocol improvements (ORCJAVA-310)
  - Create protocol support for Vera (ORCJAVA-300)

Bug Fixes:

  - openremote.sh script must write correct pid to file if CATALINA_PID is specified (ORCJAVA-311)
  - Change controller to connect to local lagarto-max through port 5002 (ORCJAVA-321)

Controller Pro 1.0.7
====================

New Features:

  - Support Marantz receivers / pre-pro IP control (ORCJAVA-244)

Controller Pro 1.0.6
====================

New Features:
