@@ -26,6 +26,7 @@ import org.junit.runners.Suite.SuiteClasses;
 
 import org.openremote.controller.protocol.http.HttpGetCommandBuilderTest;
 import org.openremote.controller.protocol.infrared.IRCommandBuilderTest;
+import org.openremote.controller.protocol.lagarto.LagartoCommandTest;
 import org.openremote.controller.protocol.socket.TCPSocketCommandBuilderTest;
 import org.openremote.controller.protocol.telnet.TelnetCommandBuilderTest;
 import org.openremote.controller.protocol.x10.X10CommandBuilderTest;
@@ -49,7 +50,8 @@ import org.openremote.controller.model.xml.Version20SensorBuilderTest;
       X10CommandBuilderTest.class,
       //KNXCommandBuilderTest.class,      // moved to KNXTests Suite
       UPnPCommandBuilderTest.class,
-      Version20SensorBuilderTest.class
+      Version20SensorBuilderTest.class,
+      LagartoCommandTest.class
    }
 )
 public class AllCommandBuildersTests
